<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F5FFFA">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/THEME1"
            android:layout_margin="25dp"
            android:onClick="Theme1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/THEME2"
            android:layout_margin="25dp"
            android:onClick="Theme2"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:text="@string/ChangeLanguage"
            android:id="@+id/changeLang"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>